--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,4 +12,17 @@
 </div><!-- /.google-ads -->
 {% endif %}
 
+<!-- Hotjar Tracking Code for http://www.luiscustodio.com -->
+<script>
+(function(h,o,t,j,a,r){
+	h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+	h._hjSettings={hjid:280407,hjsv:5};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+})
+(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/" rel="nofollow">Minimal Mistakes</a> theme.</span>
